# QJoysticks

./: CMakeLists.txt
examples/JoystickList/: main.cpp  main.qml
src/: QJoysticks.h
src/QJoysticks/: SDL_Joysticks.cpp
